--- a/jagadguru/index.html
+++ b/jagadguru/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/shritilak.jpg" />
+    <link rel="icon" type="image/jpeg" href="/shritilak1.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="font-laila">श्रीमते रामानुजाय नमः</title>
+    <title class="font-laila">जगदाचार्य</title>
   </head>
   <body>
     <div id="root"></div>
